# vmss-node

./: .dockerignore  .eslintrc.json  .gitignore  CMakeLists.txt  CODEOWNERS  Dockerfile  README.md  USAGE_GUIDE.md  index.html  jest.config.cjs  package-lock.json  package.json  remote_setup.sh  styles.css  tsconfig.json
.github/workflows/: blue-green.yml  ci.yaml  terraform-prod.yml  terraform-production.yml  terraform.yml
backend/: go.mod  main.go
docs/runbooks/: rollback.md  rollout.md
environments/dev/: backend.hcl  backend.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
environments/prod/: backend.hcl  backend.tf  main.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
environments/qa/: backend.tf  terraform.tfvars.example  variables.tf
frontend/: .eslintrc.cjs  index.html  package.json  vite.config.ts
include/: cuda_kernels.hpp  math.hpp  visualization_app.hpp
infra/: main.bicep  main.tf  outputs.tf  variables.tf  versions.tf
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  networkpolicy-allow-ingress.yaml  networkpolicy-default-deny.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: create-remote-state.sh  create-service-principal.sh
src/: App.jsx  app.js  cuda_kernels.cu  data.js  data.py  main.cpp  math.cpp  model.py  server.js  styles.css  tokenizer.py  topology.js  train.py  visualization_app.cu
terraform/: README.md  backend.hcl.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
test/: server.test.js
tests/: api.test.js
(+82 files in other folders)
